# xPortfolio

./: .dockerignore  .env  .env.example  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: docker-publish.yml
src/xPortfolio/: main.py
src/xPortfolio/algo/: __init__.py  eiee.py  mpt.py  optimizer.py
src/xPortfolio/services/optimize_portfolio/: optimizer.py  servicer.py
src/xPortfolio/utils/: __init__.py  api_client.py  logger.py  preprocessing.py
src/xstockai/: main.py
src/xstockai/grpc_proto/optimze_portfolio/: optimizePortfolio.proto
src/xstockai/proto/optimze_portfolio/: optimizePortfolio.proto
src/xstockai/services/optimize_portfolio/: optimizer.py  portfolio.py  servicer.py
src/xstockai/utils/: preprocessing.py
