[build-system]
requires = ["setuptools", "grpcio-tools"]
build-backend = "setuptools.build_meta"

[project]
name = "xPortfolio"
description = "Process portfolio optimization and act as a gRPC server for xStock."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "grpcio",
    "protobuf",
    "pandas",
    "numpy",
    "skfolio",
]
dynamic = ["version"]

[project.scripts]
xportfolio = "xPortfolio.main:serve"