[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xPortfolio"
description = "Process portfolio optimization for xStock."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "xstockapi @ git+ssh://git@github.com/X-Stock/xstockapi.git",
    "pandas~=2.2.3",
    "numpy~=2.2.2",
    "skfolio~=0.9.0",
    "python-dotenv~=1.0.1",
    "pika~=1.3.2",
]
dynamic = ["version"]

[project.scripts]
xPortfolio = "xPortfolio.main:serve"